--- a/src/components/BodyRight.css
+++ b/src/components/BodyRight.css
@@ -34,7 +34,7 @@ body {
 
 .swiper-slide img {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 75px;
+  height: 75px;
   object-fit: cover;
 }
